# SprintStorm

./: .coveragerc  .env.example  .gitignore  .pylintrc  LICENCE.md  Procfile  README.md  fly.toml  pyproject.toml  retro.md  run-robot-tests.sh  start.sh
.github/: cicd.yaml
.github/workflows/: cicd.yaml
sql/: drop_tables.sql  schema.sql  seed.sql
src/: app.py  wsgi.py
src/db/: article.py  book.py  category.py  login.py  misc.py  reference.py  register.py  user.py
src/references/: article.py  book.py  misc.py  reference.py
src/routes/: reference.py
src/templates/: add_category.html  add_reference.html  category_removal.html  error.html  index.html  layout.html  login.html  reference_removal.html  register.html  verify_removal.html  view_reference.html
src/tests/: article_test.py  book_test.py  misc_test.py
src/utils/: config.py  database.py  environment.py  logging.py  reference_handler.py
src/views/: add_category.py  add_reference.py  delete_user.py  error.py  index.py  login.py  register.py  verify_removal.py  view_reference.py
tests/: add_reference.robot  add_reference_test.py  article_test.py  article_tests.robot  book_test.py  book_tests.robot  config_test.py  environment_test.py  reference_handler_test.py  reference_resource.robot  reference_test.py  resource.robot  test_placeholder.py  test_reference.py  view_reference_test.py
tests/database_tests/: article_test.py  book_test.py  category_test.py  database_utils_test.py  login_test.py
tests/robot_tests/: article_tests.robot  bibtex_resource.robot  bibtex_tests.robot  book_tests.robot  (+3 more)
(+31 files in other folders)
