[tool.poetry]
name = "sprintstorm"
version = "0.1.0"
description = ""
authors = ["Aaro Koivukangas <aaro.koivukangas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
gunicorn = "^21.2.0"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
rpaframework = "^27.7.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
pytest = "^7.4.3"
coverage = "^7.3.2"
exceptiongroup = "^1.1.3"
flask-testing = "^0.8.1"
python-dotenv = "^1.0.0"
robotframework = "^6.1.1"
robotframework-seleniumlibrary = "^6.2.0"
rpaframework = "^27.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
